- [DS-628] Make the timeout for the extended resolver dnslookup configurable
- [DS-715] Unification of license treatment in xmlui and jspui

(Claudia Juergen, Andreas Schwander)
- [DS-709] ArrayIndexOutOfBoundsException when editing group roles

(Erick Rocha Fonseca, Claudia Juergen)
- [DS-563] Brazilian Portuguese (pt_BR) translation for XML-UI 1.6.2

(Peter Dietz)
- [DS-549] Added <a name> anchors in XMLUI

(Stuart Lewis, Christophe Dupriez)
- [DS-686] Incorrect use of UTF8 in DSpaceCSV

(Stuart Lewis)
- [DS-467] Consider making the JSPUI styles.css.jsp a static file
- [DS-550] Upgrade to latest Google Analytics tracking code
- [DS-632] Batch Metadata Import needs to validate metadata fields specified in CSVs
- [DS-646] Remove /bin scripts (replaced by 'dspace' command)
- [DS-713] dspace.log only logs remoteAddr, needs extending to include X-Forwarded-For

(Graham Triggs)
- [DS-698] Clear primary_bitstream_id references when deleting a bitstream
- [DS-696] Reduce cost of browse index pruning
- [DS-694] Add inner class to Item for more efficient metadata handling
- [DS-695] Convert DatabaseManager to use DataSource, allow for JNDI
- [DS-697] Allow media filter plugins to register their input formats directly

(Ben Bosman)
- [DS-703] Making the OAI max amount of records configurable
- [DS-603] Including a most used item list on the home page
- [DS-615] Optimize solr performance with solr.optimize and autocommit
- [DS-706] Alternative to dri2xhtml, with the goal to be more developer-friendly
- [DS-710] New Base Theme For DSpace 1.7.0
- [DS-711] Discovery release for XMLUI

1.6.2
=====

(Tim Donohue, Kim Shepherd, Keith Gilbertson, Stuart Lewis)
- [DS-584] start-handle-server script broken - Error in launcher.xml: Invalid class name

(Stuart Lewis)
- [DS-607] Invalid identifiers not escaped
- [DS-608] Batch metadata import missing item headers

(Ivan Masar, Claudia Juergen)
- [DS-567] Czech localization of 1.6.0
- [DS-595] Czech localization of 1.6.1

1.6.1
=====
