@@ -1554,6 +1554,16 @@ authority.minconfidence = ambiguous
 #xmlui.lookup.select.size = 12
 
 
+#### Ordering of bitstreams ####
+
+## Specify the ordering that bitstreams are listed.
+##
+## Bitstream field to sort on.  Values: sequence_id or name. Default: sequence_id
+#webui.bitstream.order.field = "sequence_id"
+
+## Direction of sorting order. Values: DESC or ASC. Default: ASC
+#webui.bitstream.order.direction = ASC
+
 #---------------------------------------------------------------#
 #--------------JSPUI SPECIFIC CONFIGURATIONS--------------------#
 #---------------------------------------------------------------#
